perl (5.14.2-8) UNRELEASED; urgency=low

  * Include some notes in debian/rules about not using perl more than
    necessary

 -- Dominic Hargreaves <dom@earth.li>  Tue, 31 Jan 2012 19:50:57 +0000

perl (5.14.2-7) unstable; urgency=low

  [ Dominic Hargreaves ]
  * Re-enable tests dist/threads/t/libc.t, ext/Socket/t/socketpair.t
    on GNU/Hurd fixed by changes in hurd (20111206-1)
  * Re-enable test cpan/autodie/t/recv.t on GNU/Hurd fixed by changes in
    eglibc (2.13-22)
  * Add missing POD descriptions in modules from CPAN, to fix Lintian
    warnings (Closes: #650448, #650450, #650451, #650452)
  * Fix AE ligature fallback handling in Pod::Man (thanks to
    Russ Allbery for the fix) (Closes: #652851)
  * Update references to the FSF's postal address (fixes Lintian warnings)
  * Add Lintian overrides for missing manpages for perldoc stub and
    cpanp-run-perl utility script (Closes: #654652)
  * Fix POD formatting in Term-Cap and Pod-Parser (fixes Lintian warnings)
  * Remove special-case override for non-overridable no-copyright-file
    Lintian tag (see #522827 and #553262)

  [ Jonathan Nieder ]
  * Add Homepage field pointing to dev.perl.org (Closes: #657274)

 -- Dominic Hargreaves <dom@earth.li>  Sat, 28 Jan 2012 21:40:00 +0000

perl (5.14.2-6) unstable; urgency=low

  [ Niko Tyni ]
  * debian/rules: correctly handle subject line wraps in patch headers.

  [ Dominic Hargreaves ]
  * Add versioned Conflicts on update-inetd (<< 4.41) (Closes: #649177)
  * Conflict on rather than Break doc-base (<< 0.10.3); aptitude
    runs doc-base triggers before the new version has been unpacked
  * Update Lintian override for perl-module-uses-perl4-libs-without-dep
    to reflect new path to CGI.pm
  * Disable various tests which fail on GNU/Hurd (see #648623)

 -- Dominic Hargreaves <dom@earth.li>  Mon, 28 Nov 2011 19:48:05 +0000

perl (5.14.2-5) unstable; urgency=low

  * Update versioned Breaks for dual-lived modules with updates in